--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "mjphaynes/php-resque",
+	"name": "tranch-xiao/yii2-resque",
 	"type": "library",
 	"description": "Redis backed library for creating background jobs and processing them later.",
 	"keywords": ["job", "background", "redis", "resque", "php", "php-resque", "queue", "worker"],
@@ -18,7 +18,8 @@
 		"monolog/monolog": "~1.7",
 		"symfony/console": "~2.3",
 		"symfony/yaml": "~2.3",
-		"symfony/process": "~2.3"
+		"symfony/process": "~2.3",
+		"yiisoft/yii2": "2.0.*"
 	},
 	"suggest": {
 		"ext-proctitle": "Allows php-resque to rename the title of UNIX processes to show the status of a worker in PHP versions < 5.5.0.",
