--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
 	"type": "library",
 	"description": "Redis backed library for creating background jobs and processing them later.",
 	"keywords": ["job", "background", "redis", "resque", "php", "php-resque", "queue", "worker"],
-	"homepage": "https://github.com/mjphaynes/php-resque/",
+	"homepage": "https://github.com/tranch-xiao/yii2-resque/",
 	"license": "MIT",
 	"authors": [
 		{
-			"name": "Michael Haynes",
-			"email": "mike@mjphaynes.com"
+			"name": "Tranch Xiao",
+			"email": "tranch.xiao@gmail.com"
 		}
 	],
 	"require": {
@@ -28,9 +28,6 @@
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*"
 	},
-	"bin": [
-		"bin/resque"
-	],
 	"autoload": {
 		"psr-0": {
 			"Resque": "src"
